# futunn-calendar-python

./: .gitignore  AGENTS.md  AI_PROJECT_OVERVIEW.md  DATA_NOTICE.md  MAINTENANCE_LOG.md  README.md  README_zh.md  pyproject.toml
examples/: demo.py  sync_duckdb.py
scripts/: event_timer_refresh.py
skills/install-futunn-calendar-python/: SKILL.md
skills/install-futunn-calendar-python/agents/: openai.yaml
skills/install-futunn-calendar-python/scripts/: install.ps1  install.sh
src/futunn_calendar/: __init__.py  cli.py  client.py  constants.py  models.py  storage.py
tests/: test_client.py  test_event_timer_refresh.py  test_storage.py
