[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "futunn-calendar"
version = "0.3.0"
description = "Experimental wrapper for publicly reachable webpage JSON responses used by a financial calendar page."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]
authors = [{ name = "Codex" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
futunn-calendar = "futunn_calendar.cli:main"

[project.optional-dependencies]
duckdb = ["duckdb>=1.0.0"]
sync = ["duckdb>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
futunn_calendar = ["py.typed"]
